# doc-mcp-server

./: .env.example  .gitignore  README.md  README_CN.md  pyproject.toml
.kiro/specs/ftp-doc-reader-mcp/: .config.kiro  design.md  requirements.md  tasks.md
src/ftp_doc_reader/: __init__.py  __main__.py  cache.py  config.py  extractor.py  ftp_client.py  matcher.py  models.py  scanner.py  server.py  validator.py
tests/: conftest.py  test_config.py  test_matcher.py  test_validator.py
tests/integration/: __init__.py
tests/property/: __init__.py
tests/unit/: __init__.py
