[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ftp-doc-reader"
version = "0.1.0"
description = "MCP server for searching .doc/.docx files on remote FTP/FTPS servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "FTP Doc Reader Team" },
]

[project.urls]
Homepage = "https://github.com/hackerpl/doc-mcp-server"
Repository = "https://github.com/hackerpl/doc-mcp-server"
Issues = "https://github.com/hackerpl/doc-mcp-server/issues"

dependencies = [
    "mcp",
    "python-dotenv",
    "python-docx",
    "olefile",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "hypothesis",
    "pytest-cov",
    "pyftpdlib",
]

[project.scripts]
ftp-doc-reader = "ftp_doc_reader.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ftp_doc_reader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
